[package]
name = "tenaciouszebra"
version = "0.1.0"
authors = ["Matteo Monti <matteo.monti@epfl.ch>", "Manuel Vidigueira <manuel.ribeirovidigueira@epfl.ch>", "Lars Barmettler <lars.barmettler@epfl.ch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = [ "derive", "rc" ] }
serde_bytes = { version = "0.11.7" }
serde_json = "1.0.107"
oh-snap = { git="https://github.com/barmettlerl/oh-snap" }
talk = { git="https://github.com/barmettlerl/talk", rev="eabe07edda93dd3de97792473630ebd1b588d7b2"}
doomstack = { git = "https://github.com/Distributed-EPFL/doomstack" }
rayon = { version = "1.5.1" }
bit-vec = { version = "0.6", features = ["serde"] }
bincode = { version = "1" }
okaywal = "0.3.1"

[dev-dependencies]
rand = { version = "0.8.4" }
array-init = {version = "2.0.0"}

[profile.release]
lto = "fat"
codegen-units = 1
